# chronos-finetuning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: fine_tune.yaml  model_compare.yaml  model_download.yaml
data/: train.csv  val.csv
data/time_series/: airline_passengers_data.parquet  airline_passengers_eval.parquet  airline_passengers_raw.csv  airline_passengers_timeseries.csv
docs/: architecture.md  configuration.md  getting-started.md  workflow.md
ignoreme/: ideation-01.md
scripts/: model_compare.sh
src/tachyon_model_downloader/: __init__.py  analysis_hooks.py  chronos_pipeline_loader.py  compare_outputs.py  dataset_schema.py  download_model.py  fine_tune_and_export.py  model_compare_schemas.py  model_validation.py  parquet_loader.py  run_inference.py  schemas.py
